--- a/public/assets/css/tao.css
+++ b/public/assets/css/tao.css
@@ -17,7 +17,7 @@ select#especialidadSelect, option {
     height:60px;
     bottom:40px;
     right:40px;
-    background-color:#25d366;
+    background-color:white;
     color:#FFF;
     border-radius:50px;
     text-align:center;
