--- a/public/assets/css/tao.css
+++ b/public/assets/css/tao.css
@@ -37,3 +37,8 @@ select#especialidadSelect, option {
     width: 20px;
     margin-right: 2px;
   }
+
+  .text-center{
+    text-align: justify;
+    text-justify: inter-word;
+  }
