--- a/public/assets/css/tao.css
+++ b/public/assets/css/tao.css
@@ -42,3 +42,11 @@ select#especialidadSelect, option {
     text-align: justify;
     text-justify: inter-word;
   }
+
+
+  @media screen and (max-width: 600px) {
+  .img-banner{
+    width: 600px;
+  }
+
+}
